--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -148,7 +148,7 @@
     },
     "mobile\/html\/home.html": {
         "Equipements": "Equipments",
-        "Messages": "Messages",
+        "Messages": "Message",
         "Message(s)": "Message",
         "Vues": "View",
         "Designs": "Designs",
@@ -414,12 +414,12 @@
         "Retourner un texte\/une donnée": "Return a text \/ data",
         "Icône": "Icon",
         "Alerte": "Alert",
-        "Pop-up": "Pop-up",
+        "Pop-up": "Pop up",
         "Rapport": "Report",
         "Export historique": "Historical export",
         "Supprimer bloc DANS\/A programmé": "Delete programmed IN \/ TO block",
         "Evènement": "Event",
-        "Tag": "Tag",
+        "Tag": "Tags",
         "Coloration des icones": "Icon coloring",
         "Pause de x seconde(s)": "Pause of x second (s)",
         "Attend jusqu’à ce que la condition soit valide (maximum 2h)": "Wait until the condition is valid (maximum 2h)",
@@ -501,7 +501,7 @@
         "Commandes": "Commands",
         "Paramètres d'affichage de chaque commande.<br>Pour l'affichage en disposition standard, l'ordre des commandes est modifiable par glisser-déposer.": "Display settings for each command. <br> For the display in standard layout, the order of the commands can be modified by drag and drop",
         "Type générique": "Generic type",
-        "Widget": "Widget",
+        "Widget": "Widgets",
         "Afficher le nom": "Show name",
         "Afficher le nom ET l\\'icône": "Show name AND icon",
         "Afficher les statistiques": "Show statistics",
@@ -758,7 +758,7 @@
         "En": "In",
         "si": "if",
         "Pendant plus de": "For more than",
-        "Widget": "Widget",
+        "Widget": "Widgets",
         "Appliquer à": "Apply to",
         "Afficher le nom": "Show name",
         "Afficher le nom ET l'icône": "Show name AND icon",
@@ -971,7 +971,7 @@
         "Barre": "Bar",
         "Couleur": "Color",
         "Hauteur fixe (px)": "Fixed height (px)",
-        "Widget": "Widget",
+        "Widget": "Widgets",
         "Defaut": "Default",
         "Transparent": "Transparent",
         "Paramètres optionnels sur la tuile": "Optional parameters on the tile",
@@ -1547,7 +1547,7 @@
         "Mises à jour": "Updates",
         "Mises à jour\/Market": "Updates \/ Market",
         "Cache": "Cache",
-        "API": "API",
+        "API": "APIs",
         "OS\/DB": "OS \/ DB",
         "Version": "Version",
         "Nom de votre": "Name of your",
@@ -1605,7 +1605,7 @@
         "Thème principal de": "Main theme from",
         "à": "to",
         "Supprimer le cookie de thème.": "Delete the theme cookie",
-        "Cookie": "Cookie",
+        "Cookie": "Cookies",
         "Basculer le thème en fonction de l'heure": "Toggle theme based on time",
         "Activer pour basculer automatiquement en thème alternatif aux heures choisies.": "Activate to automatically switch to alternative theme at the selected times",
         "Capteur de luminosité (mobile)": "Brightness sensor (mobile)",
@@ -1668,7 +1668,7 @@
         "HTTPS": "HTTPS",
         "Accès externe": "External access",
         "Gestion avancée": "Advanced management",
-        "IP": "IP",
+        "IP": "IPs",
         "Mac": "Mac",
         "Désactiver la gestion du réseau par": "Disable the network management by",
         "Masque IP local (utile que pour les installations type docker, sous la forme 192.168.1.*)": "Local IP mask (useful only for docker type installations, in the form 192.168.1. *)",
@@ -1676,7 +1676,7 @@
         "Attention : cette fonctionnalité n\\'est pas disponible dans le service pack community (voir votre service pack sur votre page profil sur le": "Please note: this feature is not available in the community service pack (see your service pack on your profile page on the",
         "Utiliser les DNS": "Use DNS",
         "Mode": "Fashion",
-        "Openvpn (standard)": "Openvpn (standard)",
+        "Openvpn (standard)": "Openvpn (regular)",
         "Wireguard (alpha)": "Wireguard (alpha)",
         "Statut DNS": "DNS status",
         "Démarré :": "Started:",
@@ -1713,7 +1713,7 @@
         "Nombre de lignes maximum dans un fichier de log": "Maximum lines per log file",
         "Niveau de log par défaut": "Default log level",
         "Debug": "Debug",
-        "Info": "Info",
+        "Info": "Information",
         "Warning": "Warning",
         "Erreur": "Error",
         "Défaut": "Default",
@@ -1742,7 +1742,7 @@
         "Si le niveau de charge passe en dessous de (%)": "If the charge level drops below (%)",
         "Danger": "Danger",
         "Scénario à éxecuter lors de la création d'un équipement": "Scenario to run when creating a new equipment",
-        "Ce scénario sera lancé pour chaque nouvelle création d'équipement. Le tag eqLogic_id sera passé au scénario et contiendra l'id de l'équipement crée.": "This scenario will be launched for each new equipment creation. The eqLogic_id tag will be passed to the scenario and will contain the id of the equipment created",
+        "Ce scénario sera lancé pour chaque nouvelle création d'équipement. Le tag eqLogic_id sera passé au scénario et contiendra l'id de l'équipement créé.": "This scenario will be launched for each new equipment creation. The eqLogic_id tag will be passed to the scenario and will contain the id of the equipment created",
         "Historique des commandes": "Command history",
         "Afficher les statistiques sur les widgets": "Display widget statistics",
         "Période de calcul pour min, max, moyenne": "Calculation period for min, max, average",
@@ -2014,7 +2014,7 @@
         "Regénérer le Hash": "Regenerate the Hash",
         "Session(s) active(s)": "Active session (s)",
         "ID": "ID",
-        "IP": "IP",
+        "IP": "IPs",
         "Date": "Dated",
         "Actions": "Actions",
         "Déconnecter": "Disconnect",
@@ -2341,13 +2341,13 @@
         "Utilisateur": "User",
         "Actif": "Active",
         "Profil": "Profile",
-        "API": "API",
+        "API": "APIs",
         "Double authentification": "Double authentication",
         "Dernière connexion": "Last connection",
         "Actions": "Actions",
         "Session(s) active(s)": "Active session",
         "ID": "ID",
-        "IP": "IP",
+        "IP": "IPs",
         "Date": "Dated",
         "Déconnecter": "Log-out",
         "Périphérique(s) enregistré(s)": "Registered device",
@@ -2382,7 +2382,7 @@
         "Ajouter": "Add",
         "Sauvegarder": "Save",
         "Cron": "Cron",
-        "Listener": "Listener",
+        "Listener": "Listen",
         "Démon": "Daemon",
         "ID": "ID",
         "Actif": "Active",
@@ -2581,11 +2581,11 @@
         "Inactifs": "Inactive",
         "Export CSV": "CSV export",
         "Rechercher | nom | id | :not(nom": "Search | name | id | :not(name",
-        "Vider": "Clear",
         "Date": "Dated",
         "Type": "Type",
         "ID": "ID",
-        "Nom": "Name"
+        "Nom": "Name",
+        "Vider": "Clear"
     },
     "desktop\/php\/system.php": {
         "401 - Accès non autorisé": "401 - Unauthorized access",
@@ -2650,7 +2650,7 @@
         "Aucun": "None",
         "Defaut": "Default",
         "Debug": "Debug",
-        "Info": "Info",
+        "Info": "Information",
         "Warning": "Warning",
         "Error": "Error",
         "Logs": "Logs",
@@ -2684,6 +2684,7 @@
         "Êtes-vous sûr de vouloir supprimer la vue": "Are you sure you want to delete the view",
         "Le nom de la viewZone ne peut être vide": "ViewZone name cannot be empty",
         "Largeur": "Width",
+        "Hauteur": "Height",
         "30 min": "30 mins",
         "1 heure": "1 hour",
         "Jour": "Day",
@@ -2708,7 +2709,7 @@
         "Variation": "Variation",
         "Ligne": "Line",
         "Aire": "Area",
-        "Colonne": "Column",
+        "Barre": "Bar",
         "Camembert": "Pie chart",
         "Aucun groupement": "No group",
         "Somme par heure": "Sum per hour",
@@ -2886,7 +2887,7 @@
         "Configuration de la commande": "Command setup"
     },
     "desktop\/js\/report.js": {
-        "Aucun aperçu possible en pdf": "No preview possible in pdf"
+        "Le fichier PDF ne peut pas être visualisé dans ce navigateur, veuillez le télécharger.": "The PDF file cannot be viewed in this browser, please download it"
     },
     "desktop\/js\/migrate.js": {
         "Aucune clé USB trouvée. Veuillez insérer une clé USB.": "No USB key found. Please insert a USB stick",
@@ -2895,7 +2896,7 @@
         "Il ne doit y avoir qu\\'une seule partition sur votre clé USB.": "There should only be one partition on your USB drive",
         "L\\'espace libre sur votre clé USB est trop petit": "The free space on your USB key is too small",
         "L\\'espace minimum nécessaire est de": "The minimum space required is",
-        "Mo": "Mo",
+        "Mo": "MB",
         "Merci": "Thank you",
         "Clé USB vérifiée passage à l\\'étape 2 en cours": "USB key verified, go to step 2 in progress",
         "Début de restauration de la sauvegarde !": "Start of backup restore!",
@@ -2919,7 +2920,7 @@
     "desktop\/js\/widgets.js": {
         "Largeur desktop": "Desktop width",
         "Largeur mobile": "Mobile width",
-        "Time widget": "Time widget",
+        "Time widget": "Time-widget",
         "Remplacement de widget": "Widget replacement",
         "Appliquer ce widget à": "Apply this widget to",
         "Modification(s) appliquée(s) avec succès": "Change(s) successfully applied",
@@ -3045,6 +3046,8 @@
     "desktop\/js\/scenario.js": {
         "Log d'exécution du scénario": "Scenario execution log",
         "Nom du scénario": "Scenario name",
+        "Êtes-vous sûr de vouloir désactiver les scénarios ?": "Are you sure you want to turn off scenarios?",
+        "Êtes-vous sûr de vouloir activer les scénarios ?": "Are you sure you want to enable scenarios?",
         "Êtes-vous sûr de vouloir supprimer tous les logs des scénarios ?": "Are you sure you want to delete all scenario logs?",
         "Logs des scénarios supprimés.": "Logs of scenarios deleted",
         "Vue d'ensemble des scénarios": "Overview of scenarios",
@@ -3237,7 +3240,7 @@
         "Action exécutée avec succès": "Action successfully completed",
         "[Jeedom] Message de test": "[Jeedom] Test message",
         "Ceci est un test de message pour la commande": "This is a test message for the command",
-        "Info": "Info",
+        "Info": "Information",
         "Action": "Action",
         "Sélectionner la commande": "Select command",
         "Annuler": "Cancel",
@@ -3521,7 +3524,7 @@
         "Minuteur Etat (pause ou non)": "State timer (pause or not)",
         "Minuteur pause": "Pause timer",
         "Minuteur reprendre": "Timer resume",
-        "Info": "Info",
+        "Info": "Information",
         "Numérique": "Numeric",
         "Binaire": "Binary",
         "Action": "Action",
@@ -4110,8 +4113,8 @@
     },
     "core\/class\/user.class.php": {
         "LDAP Authentification": "LDAP Authentication",
-        "Connection LDAP Error": "Connection LDAP Error",
-        "LDAP Connection OK": "LDAP Connection OK",
+        "Connection LDAP Error": "LDAP Login Error",
+        "LDAP Connection OK": "LDAP Connect OK",
         "start TLS KO": "start TLS KO",
         "start TLS OK": "start TLS OK",
         "LDAP bind user - login\/password denied": "LDAP bind user - login \/ password denied",
@@ -4138,7 +4141,7 @@
     "core\/class\/translate.class.php": {
         " . $_content . ": " . $_content . ",
         "(.*?)": "(.*?)",
-        "content parts": "content parts",
+        "content parts": "happy parts",
         " . $text . ": " . $text . "
     },
     "core\/class\/network.class.php": {
