--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -14,7 +14,7 @@
         "Timeline": "Cronología",
         "Logs": "Registros",
         "Analyse équipement": "Análisis dispositivo",
-        "Crons": "Crons",
+        "Crons": "Crones",
         "Démons": "Daemon",
         "Santé": "Salud",
         "Basculer le thème": "Alternar tema",
@@ -44,7 +44,7 @@
         "Rafraichir": "Actualizar",
         "Version desktop": "Versión escritorio",
         "Démons": "Deamons",
-        "Crons": "Crons"
+        "Crons": "Crones"
     },
     "mobile\/js\/timeline.js": {
         "Rafraîchir": "Refrescar",
@@ -54,7 +54,7 @@
     "mobile\/js\/deamon.js": {
         "Rafraichir": "Actualizar",
         "Version desktop": "Versión escritorio",
-        "Crons": "Crons",
+        "Crons": "Crones",
         "Santé": "Salud"
     },
     "mobile\/js\/equipment.js": {
@@ -287,7 +287,7 @@
         "Dernier lancement": "Última ejecución",
         "Local": "Local",
         "OK": "Bueno",
-        "NOK": "NOK",
+        "NOK": "No está bien",
         "Désactiver": "Desactivar",
         "Activer": "Activar"
     },
@@ -324,7 +324,7 @@
         "Status": "Estado",
         "Champs": "Campos",
         "Index": "índice",
-        "SQL": "SQL",
+        "SQL": "Sql",
         "Action": "Acción",
         "Corriger": "Corregir",
         "Êtes-vous sûr de vouloir corriger toute les tables ?": "¿Estás seguro de que quieres corregir todas las tablas?",
@@ -392,7 +392,7 @@
         "Dernière installation": "Última instalación",
         "Local": "Local",
         "OK": "Bueno",
-        "NOK": "NOK",
+        "NOK": "No está bien",
         "Installation en cours": "Instalación en curso",
         "Relancer": "Reiniciar"
     },
@@ -501,7 +501,7 @@
         "Commandes": "Comandos",
         "Paramètres d'affichage de chaque commande.<br>Pour l'affichage en disposition standard, l'ordre des commandes est modifiable par glisser-déposer.": "Configuración de pantalla para cada comando. <br> Para la visualización en diseño estándar, el orden de los comandos se puede modificar arrastrando y soltando",
         "Type générique": "Tipo genérico",
-        "Widget": "Widget",
+        "Widget": "Widgets",
         "Afficher le nom": "Mostrar el nombre",
         "Afficher le nom ET l\\'icône": "Mostrar nombre e ícono",
         "Afficher les statistiques": "Mostrar estadísticas",
@@ -758,7 +758,7 @@
         "En": "En",
         "si": "Si",
         "Pendant plus de": "Por más de",
-        "Widget": "Widget",
+        "Widget": "Widgets",
         "Appliquer à": "Aplicar",
         "Afficher le nom": "Mostrar el nombre",
         "Afficher le nom ET l'icône": "Mostrar el nombre y el icono",
@@ -971,7 +971,7 @@
         "Barre": "Cerrada",
         "Couleur": "Color",
         "Hauteur fixe (px)": "Altura fija (px)",
-        "Widget": "Widget",
+        "Widget": "Widgets",
         "Defaut": "General",
         "Transparent": "Transparente",
         "Paramètres optionnels sur la tuile": "Parámetros opcionales en la teja",
@@ -1315,7 +1315,7 @@
         "Aucune santé spécifique": "Ninguna Salud especificada",
         "Dépendances": "Dependencias",
         "OK": "Bueno",
-        "NOK": "NOK",
+        "NOK": "No está bien",
         "En cours": "En curso",
         "Configuration démon": "Configuración de demonio",
         "Désactivé": "Desactivado",
@@ -1705,7 +1705,7 @@
         "Rechercher une commande": "Buscar una orden",
         "Moteur de log": "Motor de registro",
         "Defaut": "General",
-        "Syslog": "Syslog",
+        "Syslog": "Registro del sistema",
         "SyslogUdp": "SyslogUdp",
         "Adresse syslog UDP": "Dirección syslog UDP",
         "Port syslog UDP": "Puerto UDP Syslog",
@@ -1742,7 +1742,7 @@
         "Si le niveau de charge passe en dessous de (%)": "Si el nivel de carga cae por debajo de (%)",
         "Danger": "Peligro",
         "Scénario à éxecuter lors de la création d'un équipement": "Escenario a ejecutar al crear un equipo",
-        "Ce scénario sera lancé pour chaque nouvelle création d'équipement. Le tag eqLogic_id sera passé au scénario et contiendra l'id de l'équipement crée.": "Este escenario se lanzará para cada nueva creación de equipos. La etiqueta eqLogic_id se pasará al escenario y contendrá la identificación del equipo creado",
+        "Ce scénario sera lancé pour chaque nouvelle création d'équipement. Le tag eqLogic_id sera passé au scénario et contiendra l'id de l'équipement créé.": "Este escenario se lanzará para cada nueva creación de equipos. La etiqueta eqLogic_id se pasará al escenario y contendrá la identificación del equipo creado",
         "Historique des commandes": "Historial de pedidos",
         "Afficher les statistiques sur les widgets": "Ver las estadísticas de los widgets",
         "Période de calcul pour min, max, moyenne": "Período de cálculo para min, max, promedio",
@@ -1766,7 +1766,7 @@
         "Push": "Empuje",
         "URL de push globale": "Url de push global",
         "Mettez ici l'URL à appeler lors d'une mise à jour de la valeur des commandes.<br>Vous pouvez utiliser les tags suivants :<br>#value# (valeur de la commande), #cmd_id# (id de la commande) et #cmd_name# (nom de la commande)": "Ponga aquí la URL para llamar al actualizar el valor de los comandos. <br> Puede usar las siguientes etiquetas: <br> # valor # (valor del pedido), # cmd_id # (ID del pedido) y # cmd_name # (nombre del pedido)",
-        "InfluxDB": "InfluxDB",
+        "InfluxDB": "Influjo DB",
         "URL du serveur InfluxDB": "URL del servidor InfluxDB",
         "Port du serveur InfluxDB": "Puerto del servidor InfluxDB",
         "Nom de la base": "Nombre base",
@@ -1880,7 +1880,7 @@
         "objets": "objetos",
         "Moteur de cache": "Motor de caché",
         "Système de fichiers": "Sistema de archivos",
-        "Memcached": "Memcached",
+        "Memcached": "Memcaché",
         "Redis": "Redis",
         "Adresse Memcache": "Dirección Memcache",
         "Port Memcache": "Puerto Memcache",
@@ -1903,7 +1903,7 @@
         "IP blanche": "IP en blanco",
         "Désactivé": "Desactivado",
         "Accès API TTS": "Acceso API TTS",
-        "Localhost": "Localhost",
+        "Localhost": "Servidor local",
         "Clé API Pro": "Clave API Pro",
         "Clé API Pro de": "Clave API Pro de",
         "Clé Market": "Mercado clave",
@@ -2581,11 +2581,11 @@
         "Inactifs": "Inactivo",
         "Export CSV": "Exportar CSV",
         "Rechercher | nom | id | :not(nom": "Buscar | nombre | id | : sin nombre",
-        "Vider": "Vacío",
         "Date": "Fecha",
         "Type": "Tipo",
         "ID": "IDENTIFICACIÓN",
-        "Nom": "Nombre"
+        "Nom": "Nombre",
+        "Vider": "Vacío"
     },
     "desktop\/php\/system.php": {
         "401 - Accès non autorisé": "401 - Acceso no autorizado",
@@ -2684,6 +2684,7 @@
         "Êtes-vous sûr de vouloir supprimer la vue": "¿Está seguro de que desea eliminar la vista?",
         "Le nom de la viewZone ne peut être vide": "El nombre de la Viewzone no puede estar vació",
         "Largeur": "Ancho",
+        "Hauteur": "Altura",
         "30 min": "30 minutos",
         "1 heure": "1 hora",
         "Jour": "Día",
@@ -2708,7 +2709,7 @@
         "Variation": "Variación",
         "Ligne": "Línea",
         "Aire": "Area",
-        "Colonne": "Columna",
+        "Barre": "Cerrada",
         "Camembert": "Gráfico circular",
         "Aucun groupement": "Ninguna agrupación",
         "Somme par heure": "Suma por hora",
@@ -2810,7 +2811,7 @@
         "Désactivé": "Desactivado",
         "OK": "Bueno",
         "Désactiver": "Desactivar",
-        "NOK": "NOK",
+        "NOK": "No está bien",
         "Supprimer": "Eliminar",
         "Mot de passe": "Contraseña",
         "Renouveler la clef API": "Renovar clave de API",
@@ -2886,7 +2887,7 @@
         "Configuration de la commande": "Configuración del comando"
     },
     "desktop\/js\/report.js": {
-        "Aucun aperçu possible en pdf": "Sin vista previa disponible en pdf"
+        "Le fichier PDF ne peut pas être visualisé dans ce navigateur, veuillez le télécharger.": "El archivo PDF no se puede ver en este navegador, descárguelo"
     },
     "desktop\/js\/migrate.js": {
         "Aucune clé USB trouvée. Veuillez insérer une clé USB.": "No se encontró llave USB. Inserte una memoria USB",
@@ -3045,6 +3046,8 @@
     "desktop\/js\/scenario.js": {
         "Log d'exécution du scénario": "Log de ejecución del escenario",
         "Nom du scénario": "Nombre del escenario",
+        "Êtes-vous sûr de vouloir désactiver les scénarios ?": "¿Estás seguro de que quieres desactivar los escenarios?",
+        "Êtes-vous sûr de vouloir activer les scénarios ?": "¿Está seguro de que desea habilitar escenarios?",
         "Êtes-vous sûr de vouloir supprimer tous les logs des scénarios ?": "¿Está seguro de que desea eliminar todos los registros de escenarios?",
         "Logs des scénarios supprimés.": "Registros de escenarios eliminados",
         "Vue d'ensemble des scénarios": "Resumen de los escenarios",
@@ -3478,7 +3481,7 @@
         "Humidité": "Humedad",
         "UV": "Radiación UV",
         "CO2 (ppm)": "CO2 (ppm)",
-        "CO (ppm)": "CO (ppm)",
+        "CO (ppm)": "CO2 (ppm)",
         "Son (dB)": "Sonido (dB)",
         "Pression": "Presión",
         "Fuite d\\'eau": "Fuga de agua",
@@ -3991,7 +3994,7 @@
         "Système à jour": "Sistema actualizado",
         "OK": "Bueno",
         "Cron actif": "Cron activo",
-        "NOK": "NOK",
+        "NOK": "No está bien",
         "Erreur cron : les crons sont désactivés. Allez dans Réglages -> Système -> Moteur de tâches pour les réactiver": "Error de cron: los crons están deshabilitados. Vaya a Configuración -> Sistema -> Motor de tareas para reactivarlos",
         "Scénario actif": "Escenario activo",
         "Erreur scénario : tous les scénarios sont désactivés. Allez dans Outils -> Scénarios pour les réactiver": "Error de escenario : todos los escenarios están desactivados. Ir a Herramientas -> Escenarios, para reactivarlos",
@@ -4016,7 +4019,7 @@
         "Nombre de processus tués par le noyau pour manque de mémoire. Votre système manque de mémoire. Essayez de reduire le nombre de plugins ou de scénarios": "Número de procesos muertos por el kernel por falta de memoria. Su sistema tiene poca memoria. Intente reducir la cantidad de complementos o escenarios",
         "Erreur I\/O": "Error de E \/ S",
         "Il y a des erreurs disque, cela peut indiquer un soucis avec le disque ou un problème d\\'alimentation": "Hay errores de disco, esto puede indicar un problema con el disco o un problema de alimentación",
-        "Swap disponible": "Swap disponible",
+        "Swap disponible": "Intercambio disponible",
         "Le swap libre n\\'est pas suffisant ou il y a moins de 2Go de mémoire sur le système et un swap inférieure à 1Go": "El intercambio gratuito no es suficiente o hay menos de 2 GB de memoria en el sistema y un intercambio de menos de 1 GB",
         "Inconnue": "Desconocido",
         "Swapiness": "Swappiness",
@@ -4436,9 +4439,9 @@
         "Date de valeur": "Fecha valor",
         "Date de collecte": "Fecha de colección",
         "Valeur": "Valor",
-        "Min": "Min",
+        "Min": "Mínimo",
         "Moyenne": "Promedio",
-        "Max": "Max",
+        "Max": "Máx.",
         "Nord": "Norte",
         "Nord-Est": "Noreste",
         "Est": "Este",
