--- a/core/i18n/pt_PT.json
+++ b/core/i18n/pt_PT.json
@@ -156,7 +156,7 @@
         "Scénario": "Cenas",
         "Analyse": "Análise",
         "Autre": "Outro",
-        "Plugins": "Plugins"
+        "Plugins": "Plug-ins"
     },
     "mobile\/html\/cron.html": {
         "Nom": "Nome",
@@ -1063,7 +1063,7 @@
         "Source": "Fonte",
         "Branche": "Branch",
         "Système": "Sistema",
-        "Changelog": "Changelog",
+        "Changelog": "Registro de alterações",
         "FAQ": "Faq",
         "Guide de démarrage": "Guia de primeiros passos",
         "Auteur(s)": "Autor (es)",
@@ -1326,7 +1326,7 @@
         "Configuration du plugin": "Configuração de plug-in",
         "Santé de": "Saúde de",
         "Benchmark Jeedom": "Referência da Jeedom",
-        "Plugins": "Plugins",
+        "Plugins": "Plug-ins",
         "Vous pouvez voir les détails des plugins sur la partie basse de cette page": "Você pode ver os detalhes dos plugins na parte inferior desta página",
         "et": "e",
         "Extensions php": "Extensões php"
@@ -1357,7 +1357,7 @@
         "Dashboard": "Painel de controle",
         "Vue": "Visão",
         "Design": "Projeto",
-        "Design 3D": "Design 3D",
+        "Design 3D": "Desenho 3D",
         "Analyse": "Análise",
         "Logs": "Toras",
         "Temps réel": "Tempo real",
@@ -1377,7 +1377,7 @@
         "Testeur expression": "Testador de expressão",
         "Variables": "Variáveis",
         "Recherche": "Pesquisa",
-        "Plugins": "Plugins",
+        "Plugins": "Plug-ins",
         "Gestion des plugins": "Gerenciamento de plug-in",
         "Réglages": "Configurações",
         "Système": "Sistema",
@@ -1430,7 +1430,7 @@
         "401 - Accès non autorisé": "401 - Acesso não autorizado",
         "Gestion": "Gestão",
         "Synchroniser": "Sincronizar",
-        "Plugins": "Plugins",
+        "Plugins": "Plug-ins",
         "Mes plugins": "Meus plugins",
         "Rechercher": "Pesquisa",
         "Etat": "Estado",
@@ -1742,7 +1742,7 @@
         "Si le niveau de charge passe en dessous de (%)": "Se o nível de carga cair abaixo de (%)",
         "Danger": "Perigo",
         "Scénario à éxecuter lors de la création d'un équipement": "Cenário a ser executado ao criar um item de equipamento",
-        "Ce scénario sera lancé pour chaque nouvelle création d'équipement. Le tag eqLogic_id sera passé au scénario et contiendra l'id de l'équipement crée.": "Este cenário será lançado a cada criação de novo equipamento. O tag eqLogic_id será passado para o cenário e conterá o id do equipamento criado",
+        "Ce scénario sera lancé pour chaque nouvelle création d'équipement. Le tag eqLogic_id sera passé au scénario et contiendra l'id de l'équipement créé.": "Este cenário será lançado a cada criação de novo equipamento. O tag eqLogic_id será passado para o cenário e conterá o id do equipamento criado",
         "Historique des commandes": "Histórico de pedidos",
         "Afficher les statistiques sur les widgets": "Mostrar estatísticas sobre os widgets",
         "Période de calcul pour min, max, moyenne": "Período de cálculo para min, max, média",
@@ -1854,7 +1854,7 @@
         "Filtre utilisateurs limités (optionnel)": "Filtro de usuário limitado (opcional)",
         "Filtre permettant d'identifier les utilisateurs limités dans la base. Si vide, tous les utilisateurs en base seront administrateurs par défaut": "Filtro para identificar usuários limitados na base de dados. Se estiver vazio, todos os usuários do banco de dados serão administradores por padrão",
         "Librairie LDAP non trouvée. Merci de l\\'installer avant de pouvoir utiliser la connexion LDAP": "Biblioteca LDAP não encontrada. Instale-o antes de poder usar a conexão LDAP",
-        "Single Sign On": "Single Sign On",
+        "Single Sign On": "Logon único",
         "Activer l'authentification SSO": "Habilitar autenticação SSO",
         "Configurer Entête HTTP": "Configurar cabeçalho HTTP",
         "Champ à utiliser comme déterminer l'entête HTTP contenant l'identifiant utilisateur (e.g HTTP_REMOTE_USER)": "Campo a ser usado para determinar o cabeçalho HTTP contendo o identificador do usuário (por exemplo, HTTP_REMOTE_USER)",
@@ -1881,7 +1881,7 @@
         "Moteur de cache": "Tampa do motor",
         "Système de fichiers": "Sistema de arquivos",
         "Memcached": "Memcached",
-        "Redis": "Redis",
+        "Redis": "Diga isso de novo",
         "Adresse Memcache": "Endereço memcached",
         "Port Memcache": "Memcached porto",
         "Adresse Redis": "Redis Endereço",
@@ -1977,7 +1977,7 @@
         "Synthèse": "Síntese",
         "Vue": "Visão",
         "Design": "Projeto",
-        "Design 3D": "Design 3D",
+        "Design 3D": "Desenho 3D",
         "Sauvegarder": "Salvar",
         "Préférences": "Preferências",
         "Sécurité": "Segurança",
@@ -2283,7 +2283,7 @@
         "Commandes par unité": "Pedidos por unidade",
         "Sans unité": "Sem unidade",
         "Commandes des objets": "Controles de objeto",
-        "Plugins": "Plugins",
+        "Plugins": "Plug-ins",
         "Catégories": "Categorias",
         "Sans catégorie": "Nenhuma categoria",
         "Visibles": "Visível",
@@ -2407,7 +2407,7 @@
         "Dashboard": "Painel de controle",
         "Vue": "Visão",
         "Design": "Projeto",
-        "Design 3D": "Design 3D",
+        "Design 3D": "Desenho 3D",
         "Gestion": "Gestão",
         "Ajouter": "Adicionar",
         "Vue d'ensemble": "Visão global",
@@ -2581,11 +2581,11 @@
         "Inactifs": "Inativo",
         "Export CSV": "Exportação de CSV",
         "Rechercher | nom | id | :not(nom": "Pesquisa | nome | id | : não (nome",
-        "Vider": "Vazio",
         "Date": "Data",
         "Type": "Tipo",
         "ID": "EU IRIA",
-        "Nom": "Nome"
+        "Nom": "Nome",
+        "Vider": "Vazio"
     },
     "desktop\/php\/system.php": {
         "401 - Accès non autorisé": "401 - Acesso não autorizado",
@@ -2604,7 +2604,7 @@
         "Dernière verification des mises à jour": "Última verificação de atualização",
         "Sauvegarder pour conserver les modications": "Salvar para manter as alterações",
         "Ne pas mettre à jour": "Não atualizar",
-        "Changelog": "Changelog",
+        "Changelog": "Registro de alterações",
         "Mettre à jour": "Atualizar",
         "Réinstaller": "Reinstalar",
         "Supprimer": "Retirar",
@@ -2631,7 +2631,7 @@
     "desktop\/js\/plugin.js": {
         "Rafraichir": "Refrescar",
         "Documentation": "Documentação",
-        "Changelog": "Changelog",
+        "Changelog": "Registro de alterações",
         "Détails": "Detalhes",
         "Supprimer": "Retirar",
         "Afficher le panneau desktop": "Painel de área de trabalho vista",
@@ -2684,6 +2684,7 @@
         "Êtes-vous sûr de vouloir supprimer la vue": "Tem certeza de que deseja excluir o ponto de vista",
         "Le nom de la viewZone ne peut être vide": "O nome do Viewzone não pode estar vazio",
         "Largeur": "Largura",
+        "Hauteur": "Altura",
         "30 min": "30 minutos",
         "1 heure": "1 hora",
         "Jour": "Dia",
@@ -2708,7 +2709,7 @@
         "Variation": "Mudança",
         "Ligne": "Linha",
         "Aire": "área",
-        "Colonne": "Coluna",
+        "Barre": "Fechado",
         "Camembert": "Queijo Camembert",
         "Aucun groupement": "Nenhum grupo",
         "Somme par heure": "Soma por hora",
@@ -2886,7 +2887,7 @@
         "Configuration de la commande": "Set Controle"
     },
     "desktop\/js\/report.js": {
-        "Aucun aperçu possible en pdf": "Nenhum pode visualizar pdf"
+        "Le fichier PDF ne peut pas être visualisé dans ce navigateur, veuillez le télécharger.": "O arquivo PDF não pode ser visualizado neste navegador, faça o download"
     },
     "desktop\/js\/migrate.js": {
         "Aucune clé USB trouvée. Veuillez insérer une clé USB.": "Nenhuma chave USB encontrada. Insira um stick USB",
@@ -2895,7 +2896,7 @@
         "Il ne doit y avoir qu\\'une seule partition sur votre clé USB.": "Deve haver apenas uma partição em sua unidade USB",
         "L\\'espace libre sur votre clé USB est trop petit": "O espaço livre na sua chave USB é muito pequeno",
         "L\\'espace minimum nécessaire est de": "O espaço mínimo necessário é",
-        "Mo": "Mo",
+        "Mo": "MB",
         "Merci": "Obrigada",
         "Clé USB vérifiée passage à l\\'étape 2 en cours": "Chave USB confirmada, vá para a etapa 2 em andamento",
         "Début de restauration de la sauvegarde !": "Início da restauração do backup!",
@@ -3045,6 +3046,8 @@
     "desktop\/js\/scenario.js": {
         "Log d'exécution du scénario": "Log execução do script",
         "Nom du scénario": "Nome do cenário",
+        "Êtes-vous sûr de vouloir désactiver les scénarios ?": "Tem certeza de que deseja desativar os cenários?",
+        "Êtes-vous sûr de vouloir activer les scénarios ?": "Tem certeza de que deseja habilitar cenários?",
         "Êtes-vous sûr de vouloir supprimer tous les logs des scénarios ?": "Tem certeza de que deseja excluir todos os logs de cenário?",
         "Logs des scénarios supprimés.": "Logs de cenários excluídos",
         "Vue d'ensemble des scénarios": "Visão geral dos cenários",
@@ -3931,7 +3934,7 @@
         "Attention ce plugin ne semble pas être compatible avec votre système": "Observe que este plugin não parece ser compatível com o seu sistema",
         "Description": "Descrição",
         "Documentation": "Documentação",
-        "Changelog": "Changelog",
+        "Changelog": "Registro de alterações",
         "Compatibilité plateforme": "Compatibilidade com a plataforma",
         "Utilisation": "Uso",
         "Informations complementaires": "Informações adicionais",
@@ -4412,7 +4415,7 @@
         "Suppression des fichiers inutiles...": "Excluindo arquivos desnecessários",
         "Impossible d\\'installer le plugin. Le nom du plugin est différent de l\\'ID ou le plugin n\\'est pas correctement formé. Veuillez contacter l\\'auteur.": "Não foi possível instalar o plug-in. O nome do plug-in é diferente do ID ou o plug-in não está formado corretamente. Entre em contato com o autor",
         "OK": "Ok",
-        "END UPDATE SUCCESS": "END UPDATE SUCCESS",
+        "END UPDATE SUCCESS": "SUCESSO DA ATUALIZAÇÃO FINAL",
         "Erreur lors de la récuperation de la derniere version de Jeedom, url :": "Erro ao recuperar a versão mais recente do Jeedom, url:",
         "Le logical ID ne peut pas être vide": "O ID lógico não pode estar vazio"
     },
@@ -4436,7 +4439,7 @@
         "Date de valeur": "Data de validade",
         "Date de collecte": "Data de coleta",
         "Valeur": "Valor",
-        "Min": "Min",
+        "Min": "Mín.",
         "Moyenne": "Média",
         "Max": "Máx.",
         "Nord": "Norte",
