--- a/core/i18n/ja_JP.json
+++ b/core/i18n/ja_JP.json
@@ -1742,7 +1742,7 @@
         "Si le niveau de charge passe en dessous de (%)": "充電レベルが（％）を下回った場合",
         "Danger": "危険",
         "Scénario à éxecuter lors de la création d'un équipement": "Scénario à éxecuter lors de la création d'un équipement",
-        "Ce scénario sera lancé pour chaque nouvelle création d'équipement. Le tag eqLogic_id sera passé au scénario et contiendra l'id de l'équipement crée.": "Ce scénario sera lancé pour chaque nouvelle création d'équipement. Le tag eqLogic_id sera passé au scénario et contiendra l'id de l'équipement crée",
+        "Ce scénario sera lancé pour chaque nouvelle création d'équipement. Le tag eqLogic_id sera passé au scénario et contiendra l'id de l'équipement créé.": "Ce scénario sera lancé pour chaque nouvelle création d'équipement. Le tag eqLogic_id sera passé au scénario et contiendra l'id de l'équipement crée",
         "Historique des commandes": "Historique des commandes",
         "Afficher les statistiques sur les widgets": "ウィジェットに関する統計情報を表示します",
         "Période de calcul pour min, max, moyenne": "最小、最大、平均の計算期間",
@@ -2581,11 +2581,11 @@
         "Inactifs": "不活発",
         "Export CSV": "CSVエクスポート",
         "Rechercher | nom | id | :not(nom": "Rechercher | nom | id | :not(nom",
-        "Vider": "空",
         "Date": "日付",
         "Type": "タイプ",
         "ID": "ID",
-        "Nom": "表題"
+        "Nom": "表題",
+        "Vider": "空"
     },
     "desktop\/php\/system.php": {
         "401 - Accès non autorisé": "401-不正アクセス",
@@ -2684,6 +2684,7 @@
         "Êtes-vous sûr de vouloir supprimer la vue": "ビューを削除してもよろしいですか",
         "Le nom de la viewZone ne peut être vide": "ViewZone名は空にできません",
         "Largeur": "幅",
+        "Hauteur": "Hauteur",
         "30 min": "30分",
         "1 heure": "1時間",
         "Jour": "日",
@@ -2708,7 +2709,7 @@
         "Variation": "変更",
         "Ligne": "ライン",
         "Aire": "エリア",
-        "Colonne": "コラム",
+        "Barre": "Barre",
         "Camembert": "カマンベール",
         "Aucun groupement": "何のグループません",
         "Somme par heure": "Somme par heure",
@@ -2886,7 +2887,7 @@
         "Configuration de la commande": "設定された制御"
     },
     "desktop\/js\/report.js": {
-        "Aucun aperçu possible en pdf": "PDFではプレビューできません"
+        "Le fichier PDF ne peut pas être visualisé dans ce navigateur, veuillez le télécharger.": "Le fichier PDF ne peut pas être visualisé dans ce navigateur, veuillez le télécharger"
     },
     "desktop\/js\/migrate.js": {
         "Aucune clé USB trouvée. Veuillez insérer une clé USB.": "Aucune clé USB trouvée. Veuillez insérer une clé USB",
@@ -3045,6 +3046,8 @@
     "desktop\/js\/scenario.js": {
         "Log d'exécution du scénario": "スクリプトの実行をログに記録します",
         "Nom du scénario": "Nom du scénario",
+        "Êtes-vous sûr de vouloir désactiver les scénarios ?": "Êtes-vous sûr de vouloir désactiver les scénarios ?",
+        "Êtes-vous sûr de vouloir activer les scénarios ?": "Êtes-vous sûr de vouloir activer les scénarios ?",
         "Êtes-vous sûr de vouloir supprimer tous les logs des scénarios ?": "Êtes-vous sûr de vouloir supprimer tous les logs des scénarios ?",
         "Logs des scénarios supprimés.": "Logs des scénarios supprimés",
         "Vue d'ensemble des scénarios": "Vue d'ensemble des scénarios",
